--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "json:server": "json-server --watch db.json",
-    "dev":"nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.1",
     "json-server": "^0.12.1",
-    "lodash": "^4.17.5"
+    "lodash": "^4.17.5",
+    "nodemon": "^1.17.1"
   }
 }
